--- a/www/index.html
+++ b/www/index.html
@@ -74,6 +74,7 @@
 	
 	function initializeBody2() {
 		mEquip_IP = localStorage.getItem(key_equipIP);		// restore from temp storage
+		if (mEquip_IP == null) mEquip_IP = '';
 		document.getElementById("equipIPinput").value = mEquip_IP;
 		document.getElementById('body2').style.display = 'block'; document.getElementById('body1').style.display = 'none';
 	}
@@ -168,6 +169,7 @@
 		cordova.plugins.barcodeScanner.scan(
 			function (result) {
 				post("http://" + mEquip_IP + "/stationstartrun", "tipid=" + result.text, scanResponse);
+				navigator.notification.beep(1);	// beep once
 			},
 			function (error) {
 			  alert("Scanning failed: " + error);
