--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 		<h2>Set Up</h2>
 		<br><br>
 		<div style="text-align:left">
-			<p>Connect this device to WiFi VenusForever... before setting on this page.</p>
+			<p>Connect this device to WiFi VenusForever... before using AUTO SET.</p>
 			<table border="0" cellpadding="0" cellspacing="6">
 			<tr>
 				<td>
@@ -54,6 +54,9 @@
 			<tr>
 				<td>
 				<button type="button" onclick="ClickSaveIP()" style="height:30px; width:100px; background-color:#A6EAEE">SAVE</button>
+				</td>
+				<td>
+				After save, connect this device to your regular WiFi to use your VF equip.
 				</td>
 			</tr>
 			</table>
@@ -163,13 +166,25 @@
 		//	"Cancelled: " + result.cancelled);
 	}
 	
+	function playBeep() {
+		var my_media = new Media("beep.wav",
+				// success callback
+				 function () { console.log("playAudio():Audio Success"); },
+				// error callback
+				 function (err) { console.log("playAudio():Audio Error: " + err); }
+		); 
+		my_media.play();
+	}
+	
 	var ClickDoScan = document.getElementById("scanButton");
 	ClickDoScan.onclick = function() { 					
 		
 		cordova.plugins.barcodeScanner.scan(
 			function (result) {
+				//navigator.notification.beep(1);	// cli beep does not work
+				playBeep();			
 				post("http://" + mEquip_IP + "/stationstartrun", "tipid=" + result.text, scanResponse);
-				navigator.notification.beep(1);	// beep once
+				
 			},
 			function (error) {
 			  alert("Scanning failed: " + error);
