--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 		<h2>Set Up</h2>
 		<br><br>
 		<div style="text-align:left">
-			<p>Connect this device to WiFi VenusForever... before using AUTO SET.</p>
+			<p>After VF equip is WiFi connected, connect this device to WiFi VenusForever... before using AUTO SET.</p>
 			<table border="0" cellpadding="0" cellspacing="6">
 			<tr>
 				<td>
@@ -48,7 +48,7 @@
 				<button type="button" onclick="ClickAutoSet()" align="left" style="height:30px; width:100px; background-color:#A6EAEE">AUTO SET</button>
 				</td>
 				<td>
-				After VF equip is WiFi connected, click Auto Set to detect Equip IP.
+				Click to detect Equip IP.
 				</td>
 			</tr>
 			<tr>
