--- a/www/index.html
+++ b/www/index.html
@@ -166,13 +166,13 @@
 		//	"Cancelled: " + result.cancelled);
 	}
 	
-	function playBeep() {
-		var my_media = new Media("beep.wav"); /*,
-				 function () { console.log("playAudio():Audio Success"); },
-				 function (err) { console.log("playAudio():Audio Error: " + err); } ); */
+	/*function playBeep() {
+		var my_media = new Media("beep.wav"); 
+				 //function () { console.log("playAudio():Audio Success"); },
+				 //function (err) { console.log("playAudio():Audio Error: " + err); } ); 
 		my_media.setVolume('0.7');
 		my_media.play();
-	}
+	}*/
 	
 	var ClickDoScan = document.getElementById("scanButton");
 	ClickDoScan.onclick = function() { 					
