--- a/www/index.html
+++ b/www/index.html
@@ -166,22 +166,23 @@
 		//	"Cancelled: " + result.cancelled);
 	}
 	
-	/*function playBeep() {
+	// this function needs cli 7.1.0 to work, iOS needs this function to beep
+	function playBeep() {
 		var my_media = new Media("beep.wav"); 
 				 //function () { console.log("playAudio():Audio Success"); },
 				 //function (err) { console.log("playAudio():Audio Error: " + err); } ); 
 		my_media.setVolume('0.7');
 		my_media.play();
-	}*/
+	}
 	
 	var ClickDoScan = document.getElementById("scanButton");
 	ClickDoScan.onclick = function() { 					
 		
 		cordova.plugins.barcodeScanner.scan(
 			function (result) {
-				//navigator.notification.beep(1);	// cli beep does not work
-				//playBeep();			
 				post("http://" + mEquip_IP + "/stationstartrun", "tipid=" + result.text, scanResponse);
+				//navigator.notification.beep(1);	// cli beep does not work
+				playBeep();			
 				
 			},
 			function (error) {
